@@ -1,6 +1,9 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.7.5
 
+  *) Fix crash in apr_pool_create() with --enable-pool-debug=all|owner.
+     [Yann Ylavic]
+
 Changes for APR 1.7.4
 
   *) Fix a regression where writing to a file opened with both APR_FOPEN_APPEND
